--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "project",
   "require": {
     "php": ">=5.6",
-    "freemius/wordpress-sdk": "~2.2",
+    "freemius/wordpress-sdk": "^2.4.1",
     "tgmpa/tgm-plugin-activation": "~2.6"
   },
   "license": "GPL-3.0+",
